--- a/templates/index.html
+++ b/templates/index.html
@@ -13,11 +13,6 @@
     />
   </head>
   <body>
-    <!--
-    // v0 by Vercel.
-    // https://v0.dev/t/qfKPBjwSG2M
-    -->
-
     <section
       style="font-family: Inter"
       class="h-screen flex flex-col items-center justify-center bg-gray-100 dark:bg-black text-gray-800 dark:text-gray-100"
@@ -26,17 +21,8 @@
         Get your favorite Quotes from "The Office"
       </h1>
       <p class="text-xl md:text-2xl text-center mb-8 px-4">
-        SIgn up and start fecthing!!!
+        Make your first API call now!!!
       </p>
-
-      <div class="flex items-center py-2">
-        <a
-          class="whitespace-nowrap font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 h-10 flex-shrink-0 bg-gray-700 hover:bg-gray-800 border-gray-700 hover:border-gray-800 text-sm border-4 text-white py-1 px-2 rounded cursor-pointer"
-          href="https://office-quotes-api.vercel.app/signup/"
-        >
-          Get Started
-        </a>
-      </div>
     </section>
   </body>
 </html>
